--- a/play/index.html
+++ b/play/index.html
@@ -45,7 +45,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="button-area d-block">
           <a href="/mc-1.8.8" class="play-button">Launch Minecraft 1.8.8</a>
           <a href="/Five Nights At Winstons" class="mt-3 play-button">Launch Five Nights At Winstons</a>
-          <a href="/mc-1.3" class="mt-3 play-button">Launch Minecraft beta 1.3</a>
+          <a href="/mc-1.12" class="mt-3 play-button">Launch Minecraft 1.12</a>
           <a href="/play/other" class="mt-3 play-button">Other</a>
         </div>
       </div>
